@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1262 2013/05/03 21:09:58 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1263 2013/05/06 21:42:24 zmedico Exp $
+
+  06 May 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.11.55.ebuild,
+  portage-2.1.11.62.ebuild, portage-2.1.11.63.ebuild,
+  portage-2.2.0_alpha173.ebuild, portage-2.2.0_alpha174.ebuild,
+  portage-9999.ebuild:
+  Install /var/log/portage/elog for bug #415911.
 
 *portage-2.2.0_alpha174 (03 May 2013)
 
